--- a/src/public/css/userHome.css
+++ b/src/public/css/userHome.css
@@ -83,14 +83,14 @@
   
   img { max-width: 100%; aspect-ratio: 1 / 1 };
 
+  a, p { text-decoration: none; color: black};
+  
   .product {
     background-color: white; 
     max-width: 220px;
-    padding: 5px 12px 5px 12px;
+    padding: 5px 12px;
     scroll-snap-align: none start;
     border-radius: 5px;
-    a, p { text-decoration: none; color: black};
-    
   };
   
   .product:hover {
@@ -100,6 +100,14 @@
     scale: 1.05;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
+}
+
+#product-price {
+  background-color: #FFDFDF;
+  padding: 5px;
+  width: fit-content;
+  border-radius: 5px;
+  font-weight: bolder;
 }
 
 #product-details {
