--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -37,7 +37,7 @@
       <div class="product">
         <a href="/product/{{this.slug}}">
           <img src="../../uploads/{{this.avatar}}" alt="">
-          <p id="product-price">{{this.price}}</p>
+          <p id="product-price">{{this.price}}đ</p>
           <p id="product-details">{{this.name}}</p>
         </a>
       </div>
