--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -15,16 +15,10 @@
     </div>
     
     <div class="details-box">
-      <div class="brand">
-        <p>{{product.brand}}</p>
-      </div>
-
-      <div class="name">
-        <p>{{product.name}}</p>
-      </div>
-
-      <div class="price">
-        <p>{{product.price}}</p>
+      <div class="title">
+        <h3>{{product.brand}}</h3>
+        <h1>{{product.name}}</h1>
+        <h3>{{product.price}}đ</h3>
       </div>
       
       <div class="description">
@@ -50,18 +44,14 @@
       </div>
     </div>
   </div>
-</div>
 
-<div class="product-details-more">
-  <div class="table">
-    <div class="title">
-      <p>Thông tin sản phẩm</p>
-    </div>
-    <div class="details">
-      <p>{{product.details}}</p>
-    </div>
+  <div class="more-details">
+    <h3>Thông tin sản phẩm</h3>
+    <p>{{product.details}}</p>
   </div>
 </div>
+
+
 
 <script>
   var getAddToCart = document.querySelector('div.add-to-cart')
