--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/svg+xml" href="../img/4.jpg" />
+  <link rel="icon" type="image/svg+xml" href="../../img/4.jpg" />
   <link rel="stylesheet" href="/css/adminAllOrders.css">
   <link rel="stylesheet" href="/css/adminAllProducts.css">
   <link rel="stylesheet" href="/css/adminCreateProduct.css">
   <link rel="stylesheet" href="/css/adminHome.css">
+  <link rel="stylesheet" href="/css/adminOrder.css">
   <link rel="stylesheet" href="/css/adminSidebar.css">
   <link rel="stylesheet" href="/css/adminTrashProducts.css">
   <link rel="stylesheet" href="/css/adminUpdateProduct.css">
