--- a/src/public/css/userOrders.css
+++ b/src/public/css/userOrders.css
@@ -66,6 +66,8 @@
     tr:nth-child(even){background-color: #F0F0F0}
     tr:nth-child(odd){background-color: white}
     tr:hover {background-color: #D1A6A6;}
+
+    a { text-decoration: none; color: black;}
   }
 
   .contact-info {
