--- a/src/public/css/userProduct.css
+++ b/src/public/css/userProduct.css
@@ -96,6 +96,7 @@
       width: fit-content;
       gap: 10px;
       padding: 5px 10px;
+      margin-bottom: 5px;
       p {
         margin-block-start: 0px;
         margin-block-end: 0px;
@@ -103,13 +104,14 @@
         padding: 10px
       };
       i { cursor: pointer }
-      margin-bottom: 5px;
     }
 
     .button {
       display: flex;
       align-items: center;
       gap: 5px;
+
+      a { text-decoration: none;}
         
       .add-to-cart, .buy-now, .out-of-order {
         display: flex;
@@ -132,7 +134,6 @@
         color: white;
       }
 
-    
       div:hover {
         cursor: pointer;
       }
