--- a/src/resource/views/users/orders.hbs
+++ b/src/resource/views/users/orders.hbs
@@ -7,7 +7,7 @@
     <span>3</span>
   </div>
 
-  <form action="/orders/create-orders" method="post">
+  <form id="form-4" action="/orders/create-orders" method="post">
     <div class="cart">
       <p>Giỏ Hàng Của Tôi</p>
       <table>
@@ -24,21 +24,20 @@
     <div class="contact-info">
       <p>Thông Tin Khách Hàng</p>
 
-      <label for="name">Tên Khách Hàng</label>
+      <label for="name">Tên Khách Hàng *</label>
       <input type="text" id="name" name="name">
       <span class="form-message"></span><br>
 
-      <label for="phone">Số Điện Thoại</label>
+      <label for="phone">Số Điện Thoại *</label>
       <input type="text" id="phone" name="phone">
       <span class="form-message"></span><br>
 
-      <label for="address">Địa Chỉ Nhận Hàng</label>
+      <label for="address">Địa Chỉ Nhận Hàng *</label>
       <input type="text" id="address" name="address">
       <span class="form-message"></span><br>
 
       <label for="note">Ghi Chú</label>
       <input type="text" id="note" name="note">
-      <span class="form-message"></span>
     </div>
 
     <div class="payment-method">
@@ -52,7 +51,7 @@
     </div>
 
     <div class="button">
-      <button title="submit" type="submit" class="submit-button">Hoàn thành</button>
+      <button title="submit" type="submit" class="submit-button">Đặt Hàng</button>
     </div>
   </form>
 
@@ -62,7 +61,6 @@
 </div>
 
 <script>
-
   // display each process logic
   var getContactInfo = document.querySelector('div.contact-info')
   var getPaymentMethod = document.querySelector('div.payment-method')
@@ -85,6 +83,7 @@
 
       getProgressMarks[1].style.backgroundColor = '#D1A6A6'
       getProgressMarks[1].style.color = 'white'
+      getProgressMarks[0].innerHTML = `<i class="fi fi-br-check"></i>`
 
       getProgressBars[0].value = '100'
       getProgressBars[0].style.accentColor = '#D1A6A6'
@@ -94,6 +93,7 @@
 
       getProgressMarks[2].style.backgroundColor = '#D1A6A6'
       getProgressMarks[2].style.color = 'white'
+      getProgressMarks[1].innerHTML = `<i class="fi fi-br-check"></i>`
 
       getProgressBars[1].value = '100'
       getProgressBars[1].style.accentColor = '#D1A6A6'
@@ -118,15 +118,21 @@
 
     // create new element and get data from localStorage
     var newProductName = document.createElement('td')
+
+    // create a tag. Link to the product details page when user want to change the cart
+    var newProductAnchorTag = document.createElement('a')
+    newProductAnchorTag.setAttribute('href', `/product/${getProductInfo.productInfo[i].slug}`)
+    newProductAnchorTag.innerText = getProductInfo.productInfo[i].name
+    newProductName.appendChild(newProductAnchorTag)
+
+    // create an input store the name value to submit the form
     var newProductNameInput = document.createElement('input')
     newProductNameInput.setAttribute('name', 'productName')
     newProductNameInput.setAttribute('value', getProductInfo.productInfo[i].name)
     newProductNameInput.style.display = 'none'
-    newProductName.innerText = getProductInfo.productInfo[i].name 
 
     var newProductPrice = document.createElement('td')
-    newProductPrice.innerText = getProductInfo.productInfo[i].price
-    {{!-- .toString().replace(/\B(?=(\d{3})+(?!\d))/g, '.') --}}
+    newProductPrice.innerText = `${getProductInfo.productInfo[i].price} đ`
 
     var newProductQuantity = document.createElement('td')
     var newProductQuantityInput = document.createElement('input')
@@ -137,7 +143,7 @@
 
     var newProductTotalPrice = document.createElement('td')
     var convertNewProductTotalPriceToString = ((getProductInfo.productInfo[i].price*1000) * getProductInfo.productInfo[i].quantity).toString().replace(/\B(?=(\d{3})+(?!\d))/g, '.') 
-    newProductTotalPrice.innerText = convertNewProductTotalPriceToString
+    newProductTotalPrice.innerText = `${convertNewProductTotalPriceToString} đ`
     
     // calculate all product prices
     totalOrderPrice += (getProductInfo.productInfo[i].price*1000) * getProductInfo.productInfo[i].quantity
@@ -170,7 +176,7 @@
   totalOrderPricesInput.setAttribute('name', 'totalProductPrice')
   totalOrderPricesInput.setAttribute('value', totalOrderPrice)
   var convertTotalOrderPricesToString = totalOrderPrice.toString().replace(/\B(?=(\d{3})+(?!\d))/g, '.') 
-  totalOrderPrices.innerText = convertTotalOrderPricesToString
+  totalOrderPrices.innerText = `${convertTotalOrderPricesToString} đ`
 
   // add each element to the total order row
   totalOrder.appendChild(totalOrderTitle)
@@ -182,5 +188,73 @@
   // add total order row to the bottom of the table
   getTable.appendChild(totalOrder)
 
+  //
+  function validating(inputElement, rule, checkValidate, index) {
+  var errorMessage = rule.test(inputElement.value)
+  var errorElement = inputElement.parentElement.querySelectorAll('.form-message')[index]
+  var errorLabelElement = inputElement.parentElement.querySelectorAll('label')[index]
+
+  if (errorMessage) {
+    errorElement.innerText = errorMessage
+    errorLabelElement.style.color = 'red'
+    inputElement.style.borderColor = 'red'
+    errorElement.style.color = "red"
+    checkValidate[index] = false
+  } else {
+    errorElement.innerText = ''
+    errorLabelElement.style.color = 'black'
+    inputElement.style.borderColor = 'black'
+    errorElement.style.color = "black"
+    checkValidate[index] = true
+  }
+}  
+
+// isRequiredString requires input must have string
+function isRequiredString(selector) {
+  return {
+    selector: selector,
+    test: function (value) {
+      return value.trim() ? undefined : 'Quên Chưa Nhập Kìa =((('
+    }
+  }
+}
+
+// validator function to validate input form from user
+function validator(options) {
+  var formElement = document.querySelector(options.form)
+  var checkValidate = Array(3).fill(false)
+
+  options.rules.forEach(function (rule, index) {
+    var inputElement = formElement.querySelector(rule.selector)
+    // input blur
+    inputElement.onblur = function () {
+      validating(inputElement, rule, checkValidate, index)
+      console.log(checkValidate)
+    }
+  })
+
+  formElement.onsubmit = function (e) {
+    for (var i = 0; i < checkValidate.length; ++i) {
+      if(checkValidate[i] === false) {
+        e.preventDefault()
+        options.rules.forEach(function (rule, index) {
+          var inputElement = formElement.querySelector(rule.selector)
+          validating(inputElement, rule, checkValidate, index)
+        })
+        break
+      } 
+    }
+  }
+}
+
+validator({
+  form: '#form-4',
+  errorSelector: '.form-message',
+  rules: [
+    isRequiredString('#name'),
+    isRequiredString('#phone'),
+    isRequiredString('#address'),
+  ]
+})
 
 </script>
