--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -2,11 +2,11 @@
   <div class="table">
     <div class="image-box">
       <div class="thumbnails">
-        <img src="../uploads/{{product.avatar}}" />
-        <img src="../uploads/{{product.avatar}}" />
-        <img src="../uploads/{{product.avatar}}" />
-        <img src="../uploads/{{product.avatar}}" />
-        <img src="../uploads/{{product.avatar}}" />
+        <img src="" />
+        <img src="" />
+        <img src="" />
+        <img src="" />
+        <img src="" />
       </div>
 
       <div class="image">
