--- a/src/public/css/adminOrder.css
+++ b/src/public/css/adminOrder.css
@@ -24,15 +24,28 @@
   }
 
   .info-group, .product-group {
-    p {
+    gap: 5px;
+    
+    title, p, button {
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: #D1A6A6;
       border-radius: 10px;
       padding: 10px;
+    }
+
+    title {
+      background-color: #D1A6A6;
+    }
+    
+    p {
+      border: 1px solid #D1A6A6;
       margin-block-start: 0;
       margin-block-end: 0;
+    }
+
+    button {
+      border: 1px solid #D1A6A6;
     }
   }
 }
